Remove projects-create component and implement modal for project creation

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbConnection": "Server=DESKTOP-URI8V6G;Database=ProjectsTrackerDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DbConnection": "Server=DESKTOP-D1AVCJU;Database=ProjectsTrackerDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AppSettings": {
     "Secret": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
